# pycubetools

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: notebook.ipynb
pycubetools/: __init__.py  config.py  exceptions.py  experiment.py
pycubetools/_internal/: __init__.py  algebra.py  inspection.py  parsers.py  reader.py  runner.py  tempfiles.py
tests/: __init__.py  test_experiment.py  test_parsers.py
tests/fixtures/: calltree.txt  dump_csv2.txt  info_basic.txt  info_tree.txt  stat_percent.txt
