[project]
name = "pycubetools"
authors = [{ name = "Christian Asch", email = "casch@cenat.ac.cr" }]
version = "0.1.0"
description = "Python interface to CUBE tools"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["polars>=1.40.1", "pycubexr>=2.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T201"]

[tool.ty.rules]
all = "error"
